--- a/config/ElizaRules.yml
+++ b/config/ElizaRules.yml
@@ -71,13 +71,9 @@
   - Your father? 
   - Does he influence you strongly? 
   - What else comes to mind when you think of your father?
-"i want":
-  - What would it mean if you got REPLACEME
-  - Why do you want REPLACEME Suppose you got REPLACEME soon
 "i am glad": 
-  - How have I helped you to be REPLACEME? 
+  - How have I helped you to be happy? 
   - What makes you happy just now
-  - Can you explain why you are suddenly REPLACEME?
 "i am sad":
   - I am sorry to hear you are depressed
   - I'm sure its not pleasant to be sad
